- added --no-icon win32 flag
- fissato uninstall win32
27/09/2004 0.0.18 fix release
- updated plugins by russell
- fixed bad bug in dothack()
- fixed potential bug in log.c
- more work on BeOS, should build properly now.
- fixed log.c bug in BeOS porting (thanks ...)
- fixed win32 exit function
- fixed a bit more the rpm
19/09/2004 0.0.17 fix release
- fixed XML generation. no more escaped entities
- fixed out of boud RETR don't send . bug (thanks ramik for submitting)
- fix per yahoo (ramik)
- fix for gmail: modified dele actions for default folders, fix for message
marking, fix for passwords with special characters, modified action for spam
folder. (thanks ramik)
- added Mac OS X Jaguar support
- added fn:patch tag support to flatnuke plugin
- added crypto (md5 and bin2hex) bindings
- error in liber.lua (comments) (thanks emaury)
- fixed popforward
- now the popserver disconnects after 60 seconds of client inactivity (this is
RFC compliant, even if the rfc says we should wait more maybe, and the NOP
pop3 command is used to avoid timeouts.
- added --fpat to force proxy auth method
- some stuff that may fix win32 shutdown problems
- fixed dothack bug
- gmail \r\r\n and \r\n\n issue fixed
- gmail has an auto learn \r-\n-issue procedure and fix
- fixed hotmail and yahoo (thanks russell)
08/09/2004 0.0.16 major feature release
- fixed the gmail plugin and added some parameters (thanks rami)
- owa.lua moved to davmail.lua
- fixed ebuild (thanks er_capoccia)
- added support for w3c date format in aggregator.lua
- httpmail now uses iso-8859-1 instead of utf8 since Windows-1252 is 8 bit
- added support for charset encoding in aggregator.lua
- added support for content tag in aggregator.lua
- added suport for host=hostname:port to popforward.lua
- added the pipe and pipe_limit options to popforward.lua
- added the io.dpopen lua primitive unter unix
- some pretty stuff for make
- added -x, --toxml to export plugin description to XML